fix weird layout shifts from css transitions

--- a/public/assets/main.css
+++ b/public/assets/main.css
@@ -44,6 +44,7 @@
 body {
     margin: 0px;
     background-color: var(--bg-primary);
+    transition: 0s;
 }
 
 h1,
